# orcestr-auth

./: .gitignore  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  PLAN.md  README.md  README.ru.md  SECURITY.md  SECURITY.ru.md
.github/: pull_request_template.md
.run/: build Python.run.xml  build all.run.xml  build npm Next.js.run.xml  build npm React.run.xml  build npm all.run.xml  build npm core.run.xml  build npm forms.run.xml  install Python.run.xml  install all.run.xml  install npm Next.js.run.xml  install npm React.run.xml  install npm all.run.xml  install npm core.run.xml  install npm forms.run.xml  release Python major.run.xml  release Python minor.run.xml  release Python patch.run.xml  release npm Next.js major.run.xml  release npm Next.js minor.run.xml  release npm Next.js patch.run.xml  release npm React major.run.xml  release npm React minor.run.xml  release npm React patch.run.xml  release npm core major.run.xml  release npm core minor.run.xml  release npm core patch.run.xml  release npm forms major.run.xml  release npm forms minor.run.xml  release npm forms patch.run.xml
assets/: README.md
backend/: README.md  README.ru.md  pyproject.toml
backend/src/orcestr_auth/: __init__.py  config.py  contracts.py  cookies.py  passwords.py  ports.py  tokens.py
backend/src/orcestr_auth/fastapi/: __init__.py  dependencies.py  oauth_redirects.py  router.py
backend/src/orcestr_auth/migrations/: __init__.py  v0_1.py
backend/src/orcestr_auth/oauth/: __init__.py  providers.py
backend/src/orcestr_auth/services/: __init__.py  codes.py  sessions.py  websocket.py
backend/src/orcestr_auth/sqlalchemy/: __init__.py  models.py  users.py
backend/tests/: test_codes.py  test_config.py  test_cookies.py  test_fastapi_router.py  test_models.py  test_oauth_providers.py  test_oauth_redirects.py  test_sessions.py  test_tokens.py  test_websocket.py
docs/: README.md  README.ru.md  RELEASE.md  RELEASE.ru.md
frontend/: README.md  README.ru.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
scripts/: release.mjs
(+18 files in other folders)
