[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "orcestr-auth"
version = "0.2.0"
description = "Reusable authentication core and FastAPI/SQLAlchemy adapters for Orcestr applications."
readme = "README.md"
requires-python = ">=3.12,<4"
license = "MPL-2.0"
license-files = ["LICENSE", "NOTICE", "TRADEMARKS.md"]
authors = [{name = "Artasov"}]
keywords = ["authentication", "fastapi", "oauth", "orcestr", "sqlalchemy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.12,<3",
    "python-jose[cryptography]>=3.5,<4",
    "passlib>=1.7.4,<2",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.128,<1"]
sqlalchemy = ["sqlalchemy>=2.0.45,<3", "alembic>=1.18,<2"]
oauth = ["httpx>=0.28,<1"]
all = [
    "fastapi>=0.128,<1",
    "sqlalchemy>=2.0.45,<3",
    "alembic>=1.18,<2",
    "httpx>=0.28,<1",
]

[project.urls]
Homepage = "https://orcestr.com"
Repository = "https://github.com/Artasov/orcestr-auth"
Documentation = "https://github.com/Artasov/orcestr-auth#readme"
Issues = "https://github.com/Artasov/orcestr-auth/issues"
Changelog = "https://github.com/Artasov/orcestr-auth/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "aiosqlite>=0.22,<1",
    "httpx>=0.28,<1",
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "sqlalchemy>=2.0.45,<3",
    "fastapi>=0.128,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orcestr_auth"]

[tool.hatch.build.targets.sdist]
include = [
    "src/orcestr_auth",
    "tests",
    "README.md",
    "README.ru.md",
    "LICENSE",
    "NOTICE",
    "TRADEMARKS.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
